tests/snapshots/snapshots__closed_formula_output.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"exists x0. x0^2 + 1 = 0\")"
---
status: exit status: 0
stdout:
false
stderr:
