tests/snapshots/snapshots__cubic_inequality_output.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"x^3 >= 1\")"
---
status: exit status: 0
stdout:
1 - x^3 <= 0
stderr:
