tests/snapshots/snapshots__cubic_symmetric_output.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"exists x. exists y. x^3 + y^3 = 3*x*y && k = x+y\")"
---
status: exit status: 0
stdout:
(1 + k > 0) && (3 - k >= 0)
stderr:
