tests/snapshots/snapshots__multivariate_output.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"exists x1. x1^2 + x0 + x2 = 0\")"
---
status: exit status: 0
stdout:
x0 + x2 <= 0
stderr:
