tests/snapshots/snapshots__named_variable_output.snap
---
source: tests/snapshots.rs
expression: "run_cli_args([\"--stats\", \"--variable-order=st,y\",\n\"exists x. x^2 + st + y = 0\"])"
---
status: exit status: 0
stdout:
st + y <= 0
stderr:
stats:
  quantifier calls: 1
  cells constructed: 39
  leaf cells: 27
  sector cells: 26
  section cells: 13
  projection levels: 3
  projection polynomials: 10
  lifting order count: 1
  lifting order 0: st -> y -> x
